--- a/src/stylesheets/ss-shared/Inputs.css
+++ b/src/stylesheets/ss-shared/Inputs.css
@@ -5,6 +5,7 @@
 }
 
 .labeled-input {
+    flex: 1;
     display: flex;
     flex-direction: column;
     gap: .25rem;
